--- a/layout/footer.html
+++ b/layout/footer.html
@@ -26,7 +26,7 @@
 
         <div>
             <i class="fa fa-phone"></i>
-            <p>+34 928 360585</p>
+            <p>928 360585</p>
         </div>
 
         <div>
@@ -40,7 +40,7 @@
 
         <p>Consúltanos</p>
 
-        <form id="contactform" action="https://formspree.io/suleymaniye.1494@gmail.com" method="post">
+        <form id="contactform" action="https://formspree.io/academiagustavo@gmail.com" method="post">
 
             <input type="hidden" name="_subject" value="Consulta vía Web de la Academia Gustavo" />
             <input type="text" name="email" placeholder="Introduzca su e-mail" />
