--- a/layout/contacto_main.html
+++ b/layout/contacto_main.html
@@ -8,7 +8,7 @@
             <p class="details">
                 <strong>Dirección</strong>
                 <br>
-                <span>Calle Ingeniero José Bosch y Sintes, 7</span>
+                <span>C/ Ingeniero José Bosch y Sintes, 7</span>
                 <br>
                 <span>35003 Las Palmas de GC</span>
             </p>
