--- a/layout/footer.html
+++ b/layout/footer.html
@@ -52,8 +52,8 @@
         <script language="JavaScript">
             var frmvalidator  = new Validator("contactform");
             frmvalidator.addValidation("email","req","Por favor, introduce una dirección de correo electrónico");
-            frmvalidator.addValidation("email","email",
-            "La dirección de correo electrónico introducida no es válida");
+            frmvalidator.addValidation("email","email", "La dirección de correo electrónico introducida no es válida");
+            frmvalidator.addValidation("mensaje", "req", "Por favor, introduce un mensaje");
         </script>
 
     </div>
