--- a/layout/header.html
+++ b/layout/header.html
@@ -2,7 +2,7 @@
 
     <div class="header-limiter">
 
-        <h1><a href="#">Academia <span>Gustavo</span></a></h1>
+        <h1><a href="index.html">Academia <span>Gustavo</span></a></h1>
 
         <nav>
             <a id="nav_inicio" href="index.html" class="selected">Inicio</a>
