--- a/layout/contacto_main.html
+++ b/layout/contacto_main.html
@@ -1,7 +1,8 @@
 <main>
     <section class="verticalLine">
         <p>
-            Contacta ante cualquier duda que te surja, ya sea para cuestiones administrativas de matrícula, sobre los cursos que impartimos, la metodología que utilizamos... <strong>¡Nos encantará atenderte!</strong>
+            Contacta ante cualquier duda que te surja, ya sea para cuestiones administrativas de matrícula, sobre los cursos 
+            que impartimos, la metodología que utilizamos... <strong>¡Nos encantará atenderte!</strong>
         </p>
 
         <section class="infoContacto">
@@ -30,5 +31,9 @@
             </p>
         </section>
     </section>
+    
+    <div id="map" class="aside_map">Mapa</div>
+    <script src="js/google_map.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTalyEXb2gxW3iiZM5uO_LRXV7iq2oNUo&callback=myMap"></script>
     
 </main>
