--- a/css/header-basic-light.css
+++ b/css/header-basic-light.css
@@ -10,6 +10,7 @@
     top: 0;
     left: 0;
     right: 0;
+    z-index: 999;
 }
 
 
@@ -112,7 +113,7 @@ body {
     /* margin: 0;*/
 	margin: 110px 0px 0px 0px; /* Use when header's always visible */
 	padding:0;
-    background-color: #f2f2f2;
+/*    background-color: #f2f2f2;*/
     font-family: sans-serif;
     font-size: 16px;
 }
