--- a/layout/contacto_main.html
+++ b/layout/contacto_main.html
@@ -33,7 +33,7 @@
     </section>
     
     <div id="map" class="aside_map">Mapa</div>
-    <script src="/js/google_map.js"></script>
+    <script src="js/google_map.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTalyEXb2gxW3iiZM5uO_LRXV7iq2oNUo&callback=myMap"></script>
     
 </main>
