--- a/css/style.css
+++ b/css/style.css
@@ -62,5 +62,6 @@ nav #nav_inicio {
         background-image: url(../img/bkgnd/bkgnd_inicio_480p.jpg);
         background-attachment: fixed;
         background-position: bottom;
+		background-size: 320px;
     }
 }
