--- a/css/style.css
+++ b/css/style.css
@@ -59,9 +59,6 @@ nav #nav_inicio {
 
 @media ( max-width: 480px ) {
     body {
-        background-image: url(../img/bkgnd/bkgnd_inicio_480p.jpg);
-        background-attachment: fixed;
-        background-position: bottom;
-		background-size: 320px;
+        background: url(../img/bkgnd/bkgnd_inicio_480p.jpg) no-repeat center center fixed;
     }
 }
