--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,8 @@ nav #nav_inicio {
 	body {
 		background-image: url(../img/bkgnd/bkgnd_inicio_480p.jpg);
 		background-attachment: fixed;
-		background-position: top;
+		background-position: center center;
+		background-repeat: no-repeat;
 		background-size: cover;
 	}
 }
