--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ nav #nav_inicio {
 	}
 }
 
-@media screen and ( max-width: 480px ) and (orientation: portrait) {
+@media screen and ( max-width: 1000px ) {
 	body {
 		background-image: url(../img/bkgnd/bkgnd_inicio_480p.jpg);
 		background-position: center center;
