--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+html{
+ height:100%;
+ min-height:100%;
+ }
+body{
+ min-height:100%;
+ }
+
+
 body {
     	background-image: url(../img/bkgnd/bkgnd_inicio.jpg);
 	background-attachment: fixed;
