--- a/css/footer-distributed-with-address-and-phones.css
+++ b/css/footer-distributed-with-address-and-phones.css
@@ -219,5 +219,6 @@
 @media screen and (max-width: 400px){
     .footer-distributed .footer-center {
         width: auto;
+	text-align: center;
     }
 }
