--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,3 @@
-html{
- height:100%;
- min-height:100%;
- }
-body{
- min-height:100%;
- }
-
-
 body {
     	background-image: url(../img/bkgnd/bkgnd_inicio.jpg);
 	background-attachment: fixed;
@@ -71,5 +62,6 @@ nav #nav_inicio {
 	body {
 		background-image: url(../img/bkgnd/bkgnd_inicio_480p.jpg);
 		background-position: top center;
+		background-attachment: inherit;
 	}
 }
