--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
-    	background-image: url(../img/bkgnd/bkgnd_inicio.jpg);
+    	background-image: url(../img/bkgnd/bkgnd_inicio_480p.jpg);
 	background-attachment: fixed;
-	background-position: bottom center;
+	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
 }
@@ -58,10 +58,8 @@ nav #nav_inicio {
 	}
 }
 
-@media screen and ( max-width: 1000px ) {
+@media screen and ( min-width: 768px ) {
 	body {
-		background-image: url(../img/bkgnd/bkgnd_inicio_480p.jpg);
-		background-position: top center;
-		background-attachment: inherit;
+		background-image: url(../img/bkgnd/bkgnd_inicio.jpg);
 	}
 }
