--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
     	background-image: url(../img/bkgnd/bkgnd_inicio_480p.jpg);
 	background-attachment: fixed;
+	background-repeat: no-repeat;
 }
 
 nav #nav_inicio {
