--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
     	background-image: url(../img/bkgnd/bkgnd_inicio_480p.jpg);
 	background-attachment: fixed;
 	background-repeat: no-repeat;
+	background-position: center center;
 }
 
 nav #nav_inicio {
