--- a/css/style.css
+++ b/css/style.css
@@ -56,3 +56,9 @@ nav #nav_inicio {
 		margin-bottom: 50px;
 	}
 }
+
+@media only screen and (min-width: 1960) {
+	body {
+		background-image: url(../img/bkgnd/bkgnd_inicio.jpg);
+	}
+}
