--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,8 @@ nav #nav_inicio {
 	}
 }
 
-@media only screen and (max-width: 1920) {
+@media only screen
+	and (device-width: 1920){
 	body {
 		background-image: url(../img/bkgnd/bkgnd_inicio.jpg);
 	}
