--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,8 @@ nav #nav_inicio {
 }
 
 @media only screen
-	and (device-width: 1920){
+	and (device-width: 1920px)
+	and (device-height: 1080px) {
 	body {
 		background-image: url(../img/bkgnd/bkgnd_inicio.jpg);
 	}
