--- a/css/style.css
+++ b/css/style.css
@@ -58,8 +58,7 @@ nav #nav_inicio {
 }
 
 @media only screen
-	and (device-width: 1920px)
-	and (device-height: 1080px) {
+	and (min-width: 1366px) {
 	body {
 		background-image: url(../img/bkgnd/bkgnd_inicio.jpg);
 	}
