--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,13 @@ nav #nav_inicio {
 }
 
 @media only screen
+	and (orientation: landscape) {
+	body {
+		background-image: url(../img/bkgnd/bkgnd_inicio_480p_land.jpg);
+	}
+}
+
+@media only screen
 	and (min-device-width: 1400px) {
 	body {
 		background-image: url(../img/bkgnd/bkgnd_inicio_1080p.jpg);
