--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,6 @@ nav #nav_inicio {
 }
 
 .section-distributed {
-	
 	text-align: left;
 	font: normal 16px sans-serif;
 	line-height: 1.5rem;
@@ -36,8 +35,6 @@ nav #nav_inicio {
 }
 
 @media (max-width: 955px) {
-    
-    
 	.section-distributed .section-left,
 	.section-distributed .section-center-left,
 	.section-distributed .section-center-right,
@@ -57,9 +54,10 @@ nav #nav_inicio {
 }
 
 @media only screen
-	and (orientation: landscape) {
+	and (min-device-width: 1000px) {
 	body {
-		background-image: url(../img/bkgnd/bkgnd_inicio_480p_land.jpg);
+		background-image: url(../img/bkgnd/bkgnd_inicio_768p.jpg);
+		background-position: center center;
 	}
 }
 
