--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 nav #nav_inicio {
-	background-color: #86a3d5;
+	background-color: dodgerblue;
 	color: #ffffff;
 	border-radius: 3px;
 	padding:6px 10px;
