--- a/css/style_acerca_de.css
+++ b/css/style_acerca_de.css
@@ -16,7 +16,7 @@ main h2 {
 }
 
 nav #nav_acerca_de {
-	background-color: #86a3d5;
+	background-color: dodgerblue;
 	color: #ffffff;
 	border-radius: 3px;
 	padding:6px 10px;
