--- a/css/style_clases.css
+++ b/css/style_clases.css
@@ -36,7 +36,7 @@ main > section > section > p {
 }
 
 nav #nav_clases {
-	background-color: #86a3d5;
+	background-color: dodgerblue;
 	color: #ffffff;
 	border-radius: 3px;
 	padding:6px 10px;
