--- a/css/style_contacto.css
+++ b/css/style_contacto.css
@@ -15,7 +15,7 @@ main > section {
 
 
 nav #nav_contacto {
-	background-color: #86a3d5;
+	background-color: dodgerblue;
 	color: #ffffff;
 	border-radius: 3px;
 	padding:6px 10px;
