--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    	background-image: url(../img/bkgnd/bkgnd_inicio_480p.jpg);
+    	background-image: url(../img/bkgnd/bkgnd_inicio_320p.jpg);
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 }
@@ -50,6 +50,13 @@ nav #nav_inicio {
 	.section-distributed .section-center-left,
 	.section-distributed .section-center-right {
 		margin-bottom: 50px;
+	}
+}
+
+@media only screen
+	and (min-device-width: 480px) {
+	body {
+		background-image: url(../img/bkgnd/bkgnd_inicio_480p.jpg);
 	}
 }
 
