--- a/layout/footer.html
+++ b/layout/footer.html
@@ -4,21 +4,6 @@
 
         <h3>Academia <span>Gustavo</span></h3>
 
-        <p class="footer-links">
-            <a href="index.html">Inicio</a>
-            ·
-            <a href="servicios.html">Servicios</a>
-            ·
-            <a href="acerca_de.html">Acerca de</a>
-            ·
-            <a href="contacto.html">Contacto</a>
-        </p>
-
-        <p class="footer-company-name">Academia Gustavo &copy; 2017</p>
-    </div>
-
-    <div class="footer-center">
-
         <div>
             <i class="fa fa-map-marker"></i>
             <p><span>C/ Ingeniero José Bosch y Síntes, 7</span> Las Palmas de Gran Canaria,<br>España</p>
@@ -26,23 +11,34 @@
 
         <div>
             <i class="fa fa-phone"></i>
-            <p>928 360585</p>
+            <p>928 36 05 85</p>
         </div>
 
         <div>
             <i class="fa fa-envelope"></i>
             <p><a href="mailto:support@company.com">academiagustavo@gmail.com</a></p>
         </div>
+        
+        <div class="footer-icons">
 
+            <a href="https://www.facebook.com/Academia-Gustavo-118960718806438/" target="_blank"><i class="fa fa-facebook"></i></a>
+            <a href="#" style="display:none;"><i class="fa fa-twitter"></i></a>
+            <a href="https://plus.google.com/116522792173865338692" target="_blank"><i class="fa fa-google-plus"></i></a>
+            <a href="#" style="display:none;"><i class="fa fa-pinterest"></i></a>
+
+        </div>
+        
     </div>
 
-    <div class="footer-right">
+    <div class="footer-center">
 
         <p>Consúltanos</p>
 
         <form id="contactform" action="https://formspree.io/academiagustavo@gmail.com" method="post">
 
             <input type="hidden" name="_subject" value="Consulta vía Web de la Academia Gustavo" />
+            <input type="text" name="nombre" placeholder="Introduzca su nombre" />
+            <input type="text" name="telefono" placeholder="Introduzca su telefono" />
             <input type="text" name="email" placeholder="Introduzca su e-mail" />
             <textarea name="mensaje" placeholder="Escriba aquí su consulta"></textarea>
             <button>Enviar</button>
@@ -51,13 +47,22 @@
         
         <script language="JavaScript">
             var frmvalidator  = new Validator("contactform");
-            frmvalidator.addValidation("email","req","Por favor, introduce una dirección de correo electrónico");
-            frmvalidator.addValidation("email","email", "La dirección de correo electrónico introducida no es válida");
+            frmvalidator.addValidation("nombre","req","Por favor, introduce un nombre para saber a quién dirigirnos");
+            frmvalidator.addValidation("telefono","req","Por favor, introduce un telefono para poder atender su duda por telefono de ser necesario");
+            frmvalidator.addValidation("email","email",
+            "La dirección de correo electrónico introducida no es válida");
             frmvalidator.addValidation("mensaje", "req", "Por favor, introduce un mensaje");
         </script>
 
     </div>
-    
-    <div class="acreditacion">Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 
+    <div class="footer-right">
+
+        <p><a href="aviso_legal_main.html">Aviso legal</a></p>
+        <p><a href="aviso_legal_main.html">Política de privacidad</a></p>
+        <p class="footer-company-name">Academia Gustavo &copy; 2018</p>
+        
+        <div class="acreditacion">Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+        
+    </div>
 </footer>
