--- a/layout/footer.html
+++ b/layout/footer.html
@@ -58,8 +58,8 @@
 
     <div class="footer-right">
 
-        <p><a href="aviso_legal_main.html">Aviso legal</a></p>
-        <p><a href="aviso_legal_main.html">Política de privacidad</a></p>
+        <p><a href="aviso_legal.html">Aviso legal</a></p>
+        <p><a href="aviso_legal.html">Política de privacidad</a></p>
         <p class="footer-company-name">Academia Gustavo &copy; 2018</p>
         
         <div class="acreditacion">Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
