--- a/layout/index_main.html
+++ b/layout/index_main.html
@@ -30,4 +30,62 @@
             Dispondrás de cómodos horarios, y si lo necesitas, podrás disponer de profesorado para la preparación intensiva de tus exámenes incluso los sábados. Si buscas una academia que te ofrezca las mejores garantías: somos tu elección.
         </p>
     </section>
+</main><main class="section-distributed">
+    
+    <div class="container-fluid" style="align-content: center">
+        <div class="row">
+            <div class="col">
+                <div class="card" style="width:400px; border-style: none; background-color: transparent;">
+                    <img class="card-img-top" src="../img/experiencia_new.png" alt="" style="width:250px; align-self: center;">
+                    <div class="card-body">
+                        <h4 class="card-title" style="background-color: lightgray; color: dodgerblue; font-weight: bold; text-align: center; padding: 10px">Experiencia</h4>
+                        <p class="card-text">
+                            Llevamos más de 20 años
+                            formando alumnos/as de
+                            todas las edades. Nuestro
+                            equipo docente está
+                            compuesto por profesores
+                            cualificados con amplia
+                            experiencia en las materias
+                            impartidas.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card" style="width:400px; border-style: none; background-color: transparent;">
+                    <img class="card-img-top" src="../img/tuManera.png" alt="" style="width:250px; align-self: center;">
+                    <div class="card-body">
+                        <h4 class="card-title" style="background-color: lightgray; color: dodgerblue; font-weight: bold; text-align: center; padding: 10px">A tu manera</h4>
+                        <p class="card-text">
+                            Impartimos clases tanto a
+                            grupos como de manera
+                            individual. Ofreciéndote la
+                            oportunidad de elegir la
+                            opción que más se ajuste a
+                            sus necesidades y
+                            posibilidades.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card" style="width:400px; border-style: none; background-color: transparent;">
+                    <img class="card-img-top" src="../img/garantia_new.png" alt="" style="width:250px; align-self: center;">
+                    <div class="card-body">
+                        <h4 class="card-title" style="background-color: lightgray; color: dodgerblue; font-weight: bold; text-align: center; padding: 10px">Garantía de resultados</h4>
+                        <p class="card-text">
+                            El principal objetivo de
+                            nuestros profesores es el
+                            aprobado de nuestros
+                            alumnos. Su gran
+                            dedicación y esfuerzo tiene
+                            como resultado un alto
+                            índice de aprobados.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
